Fix issue with tag title being in uppercase on IE11

--- a/app/assets/stylesheets/layouts/_tiles.scss
+++ b/app/assets/stylesheets/layouts/_tiles.scss
@@ -42,7 +42,7 @@
   font-weight: $brand-font-weight;
   padding-bottom: baseline-unit(2);
   margin-bottom: 0;
-  text-transform: initial;
+  text-transform: none;
 }
 
 .l-tile {
